--- a/galeria/ruha_bemutato.css
+++ b/galeria/ruha_bemutato.css
@@ -24,6 +24,35 @@ body {
     opacity: 0.7;
 }
 
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+}
+
+section {
+    text-align: center;
+}
+
+#zerokreativnemtudom img {
+    width: 300px;
+}
+
+#zerokreativnemtudom {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+#zerokreativnemtudom div {
+    border: 1px solid black;
+}
+
 
 /* The Modal (background) */
 
@@ -34,7 +63,7 @@ body {
     /* Stay in place */
     z-index: 1;
     /* Sit on top */
-    padding-top: 100px;
+    padding-top: 20px;
     /* Location of the box */
     left: 0;
     top: 0;
