navbar fix játékok bugfix max-width

--- a/navbar.css
+++ b/navbar.css
@@ -197,3 +197,11 @@ header {
     text-align: center;
     width: 100%;
 }
+
+main>section {
+    text-align: center;
+}
+
+footer {
+    text-align: center;
+}
