--- a/css/jatekok.css
+++ b/css/jatekok.css
@@ -1,6 +1,7 @@
 
 article>div {
     margin: 5px;
+    margin-bottom: 10px;
 }
 
 main {
@@ -48,12 +49,12 @@ article {
 
 .pair_card, .card_mem {
     flex: 0 0 auto;
-    width: 20%;
+    width: 25%;
     background-color: rgb(88, 80, 80);
     border-radius: 5px;
     border: solid 1px black;
     padding: 5px;
-    margin: 5px;
+    max-width: 150px;
 }
 
 .pair_card>img, .card_mem>img {
