html id="aktualiscikk" js $2("#container > div")

--- a/css/cikkek.css
+++ b/css/cikkek.css
@@ -10,6 +10,10 @@ main {
   padding: 10px;
   margin: 10px;
 }
+div > img{
+  height: 100px;
+  width: 30%;
+}
 #container {
   margin: auto;
   display: flex;
