--- a/css/tesztek.css
+++ b/css/tesztek.css
@@ -35,7 +35,6 @@ aside {
 
 #tests h3 {
     text-align: center;
-    border: solid 1px black;
     padding: 5px;
     cursor: pointer;
     margin: 0;
@@ -47,6 +46,14 @@ aside {
 
 .kerdes {
     margin: 5px;
+}
+
+.submit_button {
+    color: black;
+    background-color: transparent;
+    border: solid 1px black;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 @media screen and (max-width: 600px)
