--- a/navbar.css
+++ b/navbar.css
@@ -8,6 +8,10 @@ body {
     box-sizing: border-box;
 }
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
  :root {
     --accent-color: rgb(204, 0, 0);
     --lightest-gray: rgb(244, 244, 244);
