--- a/css/cikkek.css
+++ b/css/cikkek.css
@@ -2,10 +2,9 @@ main {
   background-color: var(--c_main);
 }
 #container > div {
-  height: 300px;
+  height: 400px;
   overflow: hidden;
-  border: 1px solid red;
-  flex: 0 0 30%;
+  display: flex 0 0 40%;
   width: 30%;
   padding: 10px;
   margin: 10px;
