--- a/css/cikkek.css
+++ b/css/cikkek.css
@@ -1,44 +1,59 @@
 main {
   background-color: var(--c_main);
 }
-#container > div {
-  height: 400px;
+
+#container>div {
+  height: 500px;
   overflow: hidden;
-  display: flex 0 0 40%;
+  display: flex 0 0 20%;
   width: 30%;
   padding: 10px;
   margin: 10px;
 }
-div > img{
+
+div>img {
   height: 100px;
   width: 30%;
 }
+
 #container {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
 }
+
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 5% auto; /* 15% from the top and centered */
+  margin: 5% auto;
+  /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 50%; /* Could be more or less, depending on screen size */
+  width: 50%;
+  /* Could be more or less, depending on screen size */
 }
+
 .modal-content img {
   width: 30%;
 }
@@ -59,6 +74,23 @@ div > img{
 }
 
 @media screen and (max-width: 1200px) {
+  #container>div {
+    height: 500px;
+    overflow: hidden;
+    display: flex 0 0 20%;
+    width: 40%;
+    padding: 10px;
+    margin: 10px;
+  }
 }
+
 @media screen and (max-width: 960px) {
+  #container>div {
+    height: 600px;
+    overflow: hidden;
+    display: flex 0 0 20%;
+    width: 60%;
+    padding: 10px;
+    margin: 10px;
+  }
 }
