--- a/style.css
+++ b/style.css
@@ -1,19 +1,4 @@
-:root,
-:root.dark {
-    --c_black: black;
-    --c_white: white;
-    --c_body: rgb(42, 77, 33);
-    --c_main: rgb(50, 119, 76);
-    --c_header: rgb(102, 102, 102);
-    --c_nav: rgb(77, 77, 77);
-    --c_nav_li: gray;
-    --c_nav_li_h: rgb(180, 180, 180);
-    --c_article: rgb(104, 104, 104);
-    --c_aside: rgb(104, 104, 104);
-    --c_footer: rgb(61, 61, 61);
-    --c_div: rgb(80, 80, 80);
-}
-:root.light {
+:root {
     --c_black: black;
     --c_white: white;
     --c_body: rgb(32, 32, 60);
