--- a/navbar.css
+++ b/navbar.css
@@ -171,6 +171,10 @@ header {
     background-color: var(--light-gray);
 }
 
+.channel-logo:hover {
+    background-color: var(--light-gray);
+}
+
 .sidebar-list .active-page {
     background-color: var(--medium-gray);
 }
