--- a/css/cikkek.css
+++ b/css/cikkek.css
@@ -5,6 +5,7 @@ main {
 #container>div {
   height: 500px;
   overflow: hidden;
+  border: 2px solid black;
   display: flex 0 0 20%;
   width: 30%;
   padding: 10px;
