--- a/css/cikkek.css
+++ b/css/cikkek.css
@@ -2,25 +2,26 @@ main {
   background-color: var(--c_main);
 }
 
+#container {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
 #container>div {
   height: 500px;
   overflow: hidden;
   border: 2px solid black;
   display: flex 0 0 20%;
   width: 30%;
-  padding: 10px;
-  margin: 10px;
+  padding: 20px;
+  margin: auto;
 }
 
 div>img {
   height: 100px;
   width: 30%;
-}
-
-#container {
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .modal {
