--- a/css/cikkek.css
+++ b/css/cikkek.css
@@ -20,8 +20,12 @@ main {
 }
 
 div>img {
-  height: 30%;
-  width: 30%;
+  height: 40%;
+  width: 100%;
+  object-fit: cover; /*a kép romlása nélkül beilleszti a képet*/
+}
+div li {
+  list-style-type: none;
 }
 
 .modal {
@@ -57,7 +61,9 @@ div>img {
 }
 
 .modal-content img {
-  width: 30%;
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
 }
 
 /* The Close Button */
